--- a/index.tmpl
+++ b/index.tmpl
@@ -4,7 +4,8 @@
 
 <h1>The form method="POST" attribute</h1>
 
-<form action="/action_page.php" method="POST" target="_blank">
+<!-- <form action="/action_page.php" method="POST" target="_blank"> -->
+<form method="POST" action="/">
   <label for="input_url">URL:</label>
   <br>
   <textarea id="input_url" name="input_url" rows="4" cols="50"></textarea>
